# rust-grpc-client

./: Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: build.yml  check.yml  fmt.yml  rust-clippy.yml
proto/: fleet.proto  incident.proto
src/: lib.rs  main.rs
src/grpc/: fleet.rs  incident.rs  mod.rs
src/proto/: fleet.rs  incident.rs  mod.rs
