[package]
name = "rust-grpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.10.4"

[build-dependencies]
tonic-build = "0.7.2"
