[package]
name = "rust-grpc-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "./src/lib.rs"

[dependencies]
tonic = "0.7.2"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.10.4"
log = "0.4.0"
env_logger = "0.9.0"
clap = { version = "3.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.7.2"
